--- a/src/my_robot_name_2dnav/param/constmap/navfn_global_planner_params.yaml
+++ b/src/my_robot_name_2dnav/param/constmap/navfn_global_planner_params.yaml
@@ -1,9 +1,6 @@
 NavfnROS:
-  visualize_potential: false    #Publish potential for rviz as pointcloud2, not really helpful, default false
-  allow_unknown: true          #Specifies whether or not to allow navfn to create plans that traverse unknown space, default true
-                                #Needs to have track_unknown_space: true in the obstacle / voxel layer (in costmap_commons_param) to work
-  planner_window_x: 0.0         #Specifies the x size of an optional window to restrict the planner to, default 0.0
-  planner_window_y: 0.0         #Specifies the y size of an optional window to restrict the planner to, default 0.0
-  
-  default_tolerance: 0.0        #If the goal is in an obstacle, the planer will plan to the nearest point in the radius of default_tolerance, default 0.0
-                                #The area is always searched, so could be slow for big values
+  visualize_potential: false    # 指定是否可视化navfn通过PointCloud2计算的潜在区域。
+  allow_unknown: true           # 是否允许navfn创建未知空间的路径规划。
+  planner_window_x: 0.0         # 指定限制计划者使用的可选窗口的x大小。这对于限制NavFn在大成本图的小窗口中工作很有用。
+  planner_window_y: 0.0         # 指定限制计划者使用的可选窗口的y大小。这对于限制NavFn在大成本图的小窗口中工作很有用。
+  default_tolerance: 0.0        # 如果目标位于障碍物中，将规划到默认公差半径内最近的点，默认值为0.0，该区域总是被搜索，因此对于大值可能会很慢
