--- a/src/my_robot_name_2dnav/param/constmap/teb_local_planner_params_diff.yaml
+++ b/src/my_robot_name_2dnav/param/constmap/teb_local_planner_params_diff.yaml
@@ -3,23 +3,19 @@ TebLocalPlannerROS:
  odom_topic: odom
     
  # Trajectory
- # “Trajectory”部分的参数用于调整轨迹，
- # “global_plan_viapoint_sep”参数调整全局路径上选取的航迹点的间隔，应根据机器人的尺寸大小调整，我们机器人的长宽为0.8*0.5(米)，这里修改为0.3，使航迹点更为紧凑；
- # “max_global_plan_lookahead_dist”参数在TebLocalPlannerROS::transformGlobalPlan()函数中被使用，决定局部规划初始轨迹的最大长度，实际调试发现此参数无需过大，因为局部轨迹在每个控制周期都被更新，实际执行的指令仅是轨迹上第一个点的速度值，这里设置为1.5即可，过长也可能导致优化结果无法有效收敛；
- # “global_plan_prune_distance”参数在TebLocalPlannerROS::pruneGlobalPlan()函数中被使用，因为全局路径是从全局起始点到全局目标点的一条轨迹，而初始的局部路径仅是从机器人当前位置到局部目标点的一小段路径，全局路径裁剪其中一部分即局部路径，该参数决定了从机器人当前位置的后面一定距离开始裁剪；
- # “feasibility_check_no_poses”参数在判断生成的轨迹是否冲突时使用，此时设置为3，即从轨迹起点开始逐个检查轨迹上的3个点，若3个点均不发生碰撞，则认为本次轨迹有效，由于teb优化并非硬约束，这里相当于是轨迹生成之后的一层保障，这个参数因根据机器人的速度和环境复杂程度调整，否则极有可能出现在狭窄环境中走走停停的情况；:
+
  teb_autosize: True
- dt_ref: 0.3
- dt_hysteresis: 0.1
+ dt_ref: 0.3 #期望的轨迹时间分辨率
+ dt_hysteresis: 0.1 #根据当前时间分辨率自动调整大小的滞后现象，通常约为。建议使用dt ref的10%。
  max_samples: 500
- global_plan_overwrite_orientation: True
+ global_plan_overwrite_orientation: True #覆盖由全局规划器提供的局部子目标的方向
  allow_init_with_backwards_motion: False
- max_global_plan_lookahead_dist: 3.0
- global_plan_viapoint_sep: 1 # 贴合全局路径不会中途后退 需要设置 weight_viapoint
- global_plan_prune_distance: 1
+ max_global_plan_lookahead_dist: 3.0 # 决定局部规划初始轨迹的最大长度，实际调试发现此参数无需过大，因为局部轨迹在每个控制周期都被更新，实际执行的指令仅是轨迹上第一个点的速度值，这里设置为1.5即可，过长也可能导致优化结果无法有效收敛；
+ global_plan_viapoint_sep: 1  #如果为正值，则通过点（via-points ）从全局计划（路径跟踪模式）展开，该值确定参考路径的分辨率（沿着全局计划的每两个连续通过点之间的最小间隔，可以参考参数weight_viapoint来调整大小
+ global_plan_prune_distance: 1 # 因为全局路径是从全局起始点到全局目标点的一条轨迹，而初始的局部路径仅是从机器人当前位置到局部目标点的一小段路径，全局路径裁剪其中一部分即局部路径，该参数决定了从机器人当前位置的后面一定距离开始裁剪；
  exact_arc_length: False # 如果为true，则计划程序在速度，加速度和转弯速率计算中使用精确的弧长（->增加的cpu时间），否则使用欧几里得近似。
- feasibility_check_no_poses: 5
- publish_feedback: False
+ feasibility_check_no_poses: 5 # 在判断生成的轨迹是否冲突时使用，此时设置为3，即从轨迹起点开始逐个检查轨迹上的3个点，若3个点均不发生碰撞，则认为本次轨迹有效，由于teb优化并非硬约束，这里相当于是轨迹生成之后的一层保障，这个参数因根据机器人的速度和环境复杂程度调整，否则极有可能出现在狭窄环境中走走停停的情况；
+ publish_feedback: False # 发布包含完整轨迹和动态障碍的列表的规划器反馈
     
  # Robot
          
@@ -30,22 +26,24 @@ TebLocalPlannerROS:
  acc_lim_x: 0.5
  acc_lim_theta: 0.5
  min_turning_radius: 0.0 # diff-drive robot (can turn on place!)
+ cmd_angle_instead_rotvel: true
+ wheelbase: 0.0
 
  footprint_model:
    type: "point"
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.1
+ xy_goal_tolerance: 0.2 #目标位置的允许距离误差
+ yaw_goal_tolerance: 0.1 #目标位置的允许角度误差
  free_goal_vel: False # “free_goal_vel”参数设置机器人在目标点速度的情况，Fasle为默认最终速度为0，即到目标位置的时候应该是保持静止状态。
  complete_global_plan: True
     
  # Obstacles
     
- min_obstacle_dist: 0.6 # This value must also include our robot radius, since footprint_model is set to "point".
- inflation_dist: 0.8
- include_costmap_obstacles: True
+ min_obstacle_dist: 0.6 # 与障碍的最小期望距离,注意，teb_local_planner本身不考虑膨胀半径
+ inflation_dist: 0.8 # 膨胀距离 障碍物周围缓冲区(应大于min_obstacle_dist才能生效)
+ include_costmap_obstacles: True #应否考虑到局部costmap的障碍
  costmap_obstacles_behind_robot_dist: 1.5
  obstacle_poses_affected: 15
 
@@ -53,8 +51,8 @@ TebLocalPlannerROS:
  include_dynamic_obstacles: True
 
  costmap_converter_plugin: ""
- costmap_converter_spin_thread: True
- costmap_converter_rate: 5
+ costmap_converter_spin_thread: True #如果为true，则costmap转换器将以不同的线程调用其回调队列
+ costmap_converter_rate: 5 #定义costmap_converter插件处理当前costmap的频率
 
  # Optimization
     
@@ -62,46 +60,46 @@ TebLocalPlannerROS:
  no_outer_iterations: 4
  optimization_activate: True
  optimization_verbose: False
- penalty_epsilon: 0.1
+ penalty_epsilon: 0.1 #为硬约束近似的惩罚函数添加一个小的安全范围
  obstacle_cost_exponent: 4
- weight_max_vel_x: 2
- weight_max_vel_theta: 1
- weight_acc_lim_x: 1
- weight_acc_lim_theta: 1
- weight_kinematics_nh: 1000
+ weight_max_vel_x: 2 #满足最大允许平移速度的优化权重
+ weight_max_vel_theta: 1 #满足最大允许平移速度的优化权重
+ weight_acc_lim_x: 1 #满足最大允许平移加速度的优化权重。
+ weight_acc_lim_theta: 1 #满足最大允许角加速度的优化权重。
+ weight_kinematics_nh: 1000 # #运动学的优化权重 参数应设置较小值，因为我们是完整约束机器人无需限制其运动学约束。
  weight_kinematics_forward_drive: 1000 #强制机器人仅选择正向（正的平移速度）的优化权重
- weight_kinematics_turning_radius: 1
- weight_optimaltime: 1 # must be > 0
+ weight_kinematics_turning_radius: 1  #采用最小转向半径的优化权重
+ weight_optimaltime: 1 # must be > 0 #根据转换/执行时间对轨迹进行收缩的优化权重。
  weight_shortest_path: 0
- weight_obstacle: 100
- weight_inflation: 0.2
+ weight_obstacle: 100 #保持与障碍物的最小距离的优化权重
+ weight_inflation: 0.2 #膨胀半径权重
  weight_dynamic_obstacle: 10
  weight_dynamic_obstacle_inflation: 0.2
- weight_viapoint: 2
- weight_adapt_factor: 2
+ weight_viapoint: 2 #跟踪全据路径的权重
+ weight_adapt_factor: 2 #迭代地增加某些权重
 
  # Homotopy Class Planner
 
- enable_homotopy_class_planning: True
- enable_multithreading: True
- max_number_classes: 4
- selection_cost_hysteresis: 1.0
- selection_prefer_initial_plan: 0.9
+ enable_homotopy_class_planning: True #激活并行规划（因为一次优化多个轨迹，占用更多的CPU资源
+ enable_multithreading: True  #激活多个线程，以便在不同的线程中规划每个轨迹
+ max_number_classes: 4 #考虑到的不同轨迹的最大数量
+ selection_cost_hysteresis: 1.0 #轨迹成本
+ selection_prefer_initial_plan: 0.9 #障碍物成本
  selection_obst_cost_scale: 100.0
- selection_alternative_time_cost: False
+ selection_alternative_time_cost: False #如果为真，时间成本(时间差平方和)被总转移时间(时间差和)所替代。
  
- roadmap_graph_no_samples: 15
- roadmap_graph_area_width: 5
+ roadmap_graph_no_samples: 15 #指定为创建路线图而生成的样本数
+ roadmap_graph_area_width: 5 #指定该区域的宽度
  roadmap_graph_area_length_scale: 1.0
- h_signature_prescaler: 0.5
- h_signature_threshold: 0.1
- obstacle_heading_threshold: 0.45
+ h_signature_prescaler: 0.5 #（0.2 < value <= 1）缩放用于区分同伦类的内部参数 #警告：只能减少此参数，如果在局部costmap中遇到太多障碍物的情况，请勿选择极低值，否则无法将障碍物彼此区分开线缩放用于区分同伦类的内部参数（H-signature）。
+ h_signature_threshold: 0.1 #如果实部和复部的差都低于规定的阈值，则假定两个h签名相等。
+ obstacle_heading_threshold: 0.45 #指定障碍标头和目标标头之间的标量积的值，以便将(障碍)考虑到勘探中
  switching_blocking_period: 0.0
  viapoints_all_candidates: True
  delete_detours_backwards: True
  max_ratio_detours_duration_best_duration: 3.0
- visualize_hc_graph: False
- visualize_with_time_as_z_axis_scale: False
+ visualize_hc_graph: False  #可视化创建的图形，用于探索不同的轨迹（在rviz中检查标记消息）
+ visualize_with_time_as_z_axis_scale: False #如果为真，则不同拓扑的所有轨迹都附加到这组vio -points上，否则只有共享与初始/全局计划相同拓扑的轨迹与它们连接
 
 # Recovery
  
