--- a/src/my_robot_name_2dnav/param/constmap/costmap_common_params.yaml
+++ b/src/my_robot_name_2dnav/param/constmap/costmap_common_params.yaml
@@ -1,5 +1,8 @@
+max_obstacle_height: 2.0 #传感器读数的最大有效高度，单位为 meters; 通常设置为略高于机器人的实际高度，高度是指包含机械臂打直情况下的最大高度。
 #robot_radius: 0.4 # 设置机器人的半径，单位是米。由于在stdr中机器人是圆形的，所以可以直接设置该参数。如果你的机器人不是圆形的那就需要使用footprint这个参数
 footprint: [[-0.24, -0.22], [-0.24, 0.22], [0.24, 0.22], [0.24, -0.22]]
+
+map_type: costmap # 地图类型，这里为voxel(体素地图)。另一种地图类型为costmap(代价地图)。这两者之间的区别是前者是世界的3D表示，后者为世界的2D表示。
 
 # Static Map Layer：静态地图层，基本上不变的地图层，通常都是SLAM建立完成的静态地图。
 # Obstacle Map Layer：障碍地图层，用于动态的记录传感器感知到的障碍物信息。
@@ -19,15 +22,16 @@ obstacle_layer:
     topic: scan # 激光雷达数据类型;
     marking: true # 是否可以使用该传感器来标记障碍物;
     clearing: true  # 是否可以使用该传感器来清除障碍物标记为自由空间;
-    min_obstacle_height: 0.1
-    max_obstacle_height: 0.3
+    min_obstacle_height: 0
+    max_obstacle_height: 2
   camera:
     data_type: PointCloud2
     topic: camera/depth/points
+#    topic: camera/depth_registered/points
     marking: true
     clearing: true
     min_obstacle_height: 0.0
-    max_obstacle_height: 2.0
+    max_obstacle_height: 1.0
 
 
 inflation_layer:
