--- a/src/my_robot_name_2dnav/param/constmap/dwa_local_planner_params.yaml
+++ b/src/my_robot_name_2dnav/param/constmap/dwa_local_planner_params.yaml
@@ -1,39 +1,51 @@
 DWAPlannerROS:
-  max_trans_vel: 0.50
-  min_trans_vel: 0.01
+  max_vel_trans: 0.50
+  min_vel_trans: 0.10
   max_vel_x: 0.50
-  min_vel_x: -0.025
+  min_vel_x: 0.40
   max_vel_y: 0.0
   min_vel_y: 0.0
-  max_rot_vel: 0.30
-  min_rot_vel: -0.30
-  acc_lim_x: 1.25
+  max_vel_theta: 0.30
+  min_vel_theta: -0.30
+  acc_lim_x: 2.5
   acc_lim_y: 0.0
-  acc_lim_theta: 5
-  acc_lim_trans: 1.25
+  acc_lim_th: 3.2
+  acc_lim_trans: 0.1
 
-  prune_plan: false
+
 
   xy_goal_tolerance: 0.25
   yaw_goal_tolerance: 0.1
+  latch_xy_goal_tolerance: false
+
+
   trans_stopped_vel: 0.1
-  rot_stopped_vel: 0.1
+  theta_stopped_vel: 0.1
   sim_time: 3.0
   sim_granularity: 0.1
+  vx_samples: 10
+  vy_samples: 10
+  vth_samples: 20
+  controller_frequency: 5
+
+
   angular_sim_granularity: 0.1
   path_distance_bias: 34.0
   goal_distance_bias: 24.0
   occdist_scale: 0.05
   twirling_scale: 0.0
-  stop_time_buffer: 0.5
-  oscillation_reset_dist: 0.05
-  oscillation_reset_angle: 0.2
   forward_point_distance: 0.3
+  stop_time_buffer: 0.5
   scaling_speed: 0.25
   max_scaling_factor: 0.2
-  vx_samples: 20
-  vy_samples: 0
-  vth_samples: 40
+  publish_cost_grid: false
 
-  use_dwa: true
-  restore_defaults: false
+  # 防震参数
+  oscillation_reset_dist: 0.05
+  oscillation_reset_angle: 0.2
+
+  # 全局计划参数
+  prune_plan: true
+
+#  use_dwa: true
+#  restore_defaults: false
