--- a/src/my_robot_name_2dnav/param/constmap/local_costmap_params.yaml
+++ b/src/my_robot_name_2dnav/param/constmap/local_costmap_params.yaml
@@ -1,5 +1,5 @@
 local_costmap:
-  global_frame: map # 在局部代价地图中的全局坐标系，一般需要设置为odom_frame;
+  global_frame: odom # 在局部代价地图中的全局坐标系，一般需要设置为odom_frame;
   robot_base_frame: base_footprint # 机器人本体的基坐标系;
   update_frequency: 5.0 # 局部代价地图的更新频率;
   publish_frequency: 2.0 # 局部代价地图的发布频率;
